--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
 <!-- head section does not produce visible content -->
 	<head>
 	 <!-- Title, visible to search engines and in the browser tab -->
-		<title>Document Title DES221</title>
+		<title>Fin's Furniture</title>
     <!-- 'meta' details about this webpage -->
 		<meta charset="UTF-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- The description tag is used by search engines -->
 		<meta name="description" content="This is what my page is about">
     <!-- STYLESHEETS Your main 'style.css' should typically be last -->
-		
+
+		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">	
+		<link rel="stylesheet" href="css/style.css" type="text/css">
+	
 		<!-- other stylesheets, e.g. Google fonts -->
 		<!-- your stylesheet -->
 		<!-- CRITICAL JAVASCRIPT non critical scripts should be at the end of the 
@@ -22,25 +25,103 @@
 <!-- ------------------------------ BODY ----------------------------------- -->	
 	<body>
 		<!-- the placement of <header>, <main> and <footer> blocks is only a guide for "typical" websites -->
-
-		
-		<main>
-			<div>
-				<h1>My first day in DES221</h1>
-				<h2>I added No adjective with my name to the rest of the class for icebreaker activity</h2>
-				<p>PUT ONE PARAGRAPH OF YOUR EXPERIENCE</p>
-				<ul>
-					<li>Make a website</li>
-					<li>Target photographers</li>
-					<li></li>
+		<header class="container-fluid shadow">
+			<div class="container">
+				<div class="row nav nav-top">
+					<div class="col">
+						<img src="/img/logo.png" height="50">
+					</div>
+					<div class="col">
+						<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Explore our range!">
+					</div>
+					<div class="col-2">
+						<div class="row">
+							<div class="col">
+								<img class="head-icon" src="img/037-user.png" alt="shopping-cart" width="40">
+							</div>
+							<div class="col">
+								<img class="head-icon" src="img/069-placeholder.png" alt="shopping-cart" width="40">
+							</div>
+							<div class="col">
+								<img class="head-icon" src="img/111-shopping-cart.png" alt="shopping-cart" width="40" data-toggle="tooltip" data-placement="bottom" title="You have no items in your cart">
+							</div>
+						</div>
+					</div>
+				</div>
+			
+				<ul id="nav" class="nav nav-fill nav-pills nav-bar">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Living</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Dining</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Bathroom</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Bedroom</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Outdoor</a>
+					</li>
 				</ul>
-
-				
 			</div>
+
+
+		</header>
+		<main class="container-fluid">
+			<div id="carouselhero" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner">
+				  <div class="carousel-item active">
+					<img src="img/carosel-1.jpg" class="d-block w-100" alt="...">
+				  </div>
+				  <div class="carousel-item">
+					<img src="img/carosel-2.jpg" class="d-block w-100" alt="...">
+				  </div>
+				  <div class="carousel-item">
+					<img src="img/carosel-3.jpg" class="d-block w-100" alt="...">
+				  </div>
+				  <div class="carousel-item">
+					<img src="img/carosel-4.jpg" class="d-block w-100" alt="...">
+				  </div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselhero" role="button" data-slide="prev">
+				  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				  <span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselhero" role="button" data-slide="next">
+				  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				  <span class="sr-only">Next</span>
+				</a>
+			  </div>
+			  <div class="container">
+				<div class="row">
+					<div class="col">
+						<div class="card">
+							<img src="..." class="card-img-top" alt="...">
+							<div class="card-body">
+							  <h5 class="card-title">Card title</h5>
+							  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							  <a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+						  </div>
+					</div>
+					<div class="col">
+						
+					</div>
+				</div>
+
+			  </div>
 		</main>
+<footer>
+<div>Icons made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+</footer>
 
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
-		<!-- this is where non-load-critical javascript should be placed i.e. the document can sill load properly with out it -->
+<!-- this is where non-load-critical javascript should be placed i.e. the document can sill load properly with out it -->
 		<!--		<script src="js/scripts.js" type="text/javascript"></script>-->
 	</body>
 	
