--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 	</head>
 <!-- ------------------------------ BODY ----------------------------------- -->	
 	<body>
-		<!-- the placement of <header>, <main> and <footer> blocks is only a guide for "typical" websites -->
 		<header class="container-fluid shadow">
 			<div class="container">
 				<div class="row nav nav-top">
 					<div class="col">
-						<img src="/img/logo.png" height="50">
+						<img src="img/logo.png" height="50">
 					</div>
 					<div class="col">
 						<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Explore our range!">
@@ -96,26 +95,150 @@
 				</a>
 			  </div>
 			  <div class="container">
+
+				<h2>Shop by Catergory</h2>
+
+				<div class="row">
+					<div class="col col-12-sm">
+						<div class="card">
+							<img src="img/living.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+							  <h5 class="card-title">Living</h5>
+							  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							  <a href="#" class="btn btn-primary">Shop</a>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card">
+							<img src="img/dining.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+							  <h5 class="card-title">Dining</h5>
+							  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							  <a href="#" class="btn btn-primary">Shop</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col col-12-md">
+						<div class="card">
+							<img src="img/bath.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+							  <h5 class="card-title">Bathroom</h5>
+							  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							  <a href="#" class="btn btn-primary">Shop</a>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card">
+							<img src="img/bed.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+							  <h5 class="card-title">Bedroom</h5>
+							  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							  <a href="#" class="btn btn-primary">Shop</a>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col">
 						<div class="card">
-							<img src="..." class="card-img-top" alt="...">
+							<img src="img/outdoor.jpg" class="card-img-top" alt="...">
 							<div class="card-body">
-							  <h5 class="card-title">Card title</h5>
+							  <h5 class="card-title">Outdoor</h5>
 							  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-							  <a href="#" class="btn btn-primary">Go somewhere</a>
+							  <a href="#" class="btn btn-primary">Shop</a>
 							</div>
-						  </div>
-					</div>
-					<div class="col">
-						
+						</div>
 					</div>
 				</div>
+			  </div>
+			  <div class="subscribe-sec">
+				<div class="container">
+					<div class="row">
+						<div class="col">
+							<h3>Subscribe to our newsletter!</h3>
+						</div>
+						<div class="col">
+							<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="YouEmail@Example.com">
 
+						</div>
+						<div class="col">
+							<button type="button" class="btn btn-secondary">Submit</button>
+
+						</div>
+					</div>
+				</div>
 			  </div>
 		</main>
-<footer>
-<div>Icons made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
+<footer class="shadow">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<ul>
+					<li>
+						<h5>About</h5>
+					</li>
+					<li>
+						<a href="...">Our Story</a>
+					</li>
+					<li>
+						<a href="...">Contact Us</a>
+					</li>
+					<li>
+						<a href="...">Store Locator</a>
+					</li>
+					<li>
+						<a href="...">ABN</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col">
+				<ul>
+					<li>
+						<h5>Support</h5>
+					</li>
+					<li>
+						<a href="...">Returns</a>
+					</li>
+					<li>
+						<a href="...">Contact Hours</a>
+					</li>
+					<li>
+						<a href="...">Help Center</a>
+					</li>
+					<li>
+						<a href="...">Policy</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col">
+				<ul>
+					<li>
+						<h5>Services</h5>
+					</li>
+					<li>
+						<a href="...">Aterpay</a>
+					</li>
+					<li>
+						<a href="...">ZIP Pay</a>
+					</li>
+					<li>
+						<a href="...">Frontdoor Delivery</a>
+					</li>
+					<li>
+						<a href="...">Amazon Prime</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+<div class="footnote">Icons made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+<div class="footnote">Images sourced from <a href="https://unsplash.com/">Unsplash.com</a></div>
+<div class="footnote">Lochlan Brown - 2020</div>
 </footer>
 
 <script src="js/jquery-3.4.1.min.js"></script>
